<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textViewLabel1a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titlelabel"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/textViewLabel2a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categorylabel"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinner_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/textViewLabel3a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descriptionlabel"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinner_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/textViewLabel4a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantitylabel4"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText_quantity"
        android:layout_width="397dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberSigned"
        android:text="1"
        android:textSize="10pt"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/textViewLabel5a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/datelabel"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/data"
        android:layout_width="399dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:textSize="14sp" />


    <TextView
        android:id="@+id/textViewLabel6a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remarklabel"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinner_reason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/advreason"
        android:spinnerMode="dialog" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/advcancelbutton"
            android:layout_width="200dp"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content"
            android:onClick="click"
            android:text="@string/cancelbutton" />

        <Button
            android:id="@+id/advsubmitbutton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:onClick="click"
            android:text="@string/submitbutton" />
    </LinearLayout>

</LinearLayout>