<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="178dp"
        android:layout_height="56dp"
        android:text="@string/request_id"
        android:textSize="@dimen/font_size_medium"
        android:layout_above="@id/listView1"/>


    <ListView
        android:id="@+id/listView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1" />


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/listView1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/rejectBTN"
                android:layout_width="325dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/holo_red_dark"
                android:text="@string/rejectBTN" />

            <Button
                android:id="@+id/approveBTN"
                android:layout_width="325dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/holo_green_light"
                android:text="@string/approveBTN" />

        </TableRow>
    </TableLayout>

    </LinearLayout>



