<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="99dp"
        android:text="@string/customdialogtitle"
        android:textSize="@dimen/font_size_medium" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:layout_alignStart="@+id/textView1"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-3dp"
        android:layout_marginTop="86dp"
        android:ems="10"
        android:inputType="textMultiLine|textLongMessage"
        android:singleLine="false" />

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/cancelBTN"
            android:layout_width="325dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cancelBTN" />

        <Button
            android:id="@+id/okBTN"
            android:layout_width="325dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/okBTN" />
    </LinearLayout>


</RelativeLayout>