<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="Current Department Representative:"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/currentRep"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="273dp"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:text="@string/selectEmployee"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/empName"
        android:layout_width="252dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enterName"
        android:inputType="textPersonName"
        android:text="" />

    <Button
        android:id="@+id/checkNameBTN"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/checkNameBTNtext"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:text="Current Collection Point:"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/currentCollectionPoint"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="280dp"
        android:layout_height="47dp"
        android:layout_marginTop="15dp"
        android:text="Collection Point: "
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/submitBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"/>

</LinearLayout>