<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewLabel1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/poidlabel"
                android:textColor="#000000"
                tools:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="22sp"
                tools:textColor="@color/colorPrimaryDark" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewLabel2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/odidlabel"
                android:textColor="#000000"
                tools:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="18sp"
                tools:textColor="@color/colorPrimaryDark" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewLabel3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ddidlabel"
                android:textColor="#000000"
                tools:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="22sp"
                tools:textColor="@color/colorPrimaryDark" />

        </TableRow>
    </TableLayout>
</LinearLayout>