<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".purchaseOrder.EditPOitemActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewLabel1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/itemidlabel"
                tools:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                tools:textColor="@color/colorPrimaryDark" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewLabel2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descidlabel"
                tools:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                tools:textColor="@color/colorPrimaryDark" />

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewLabel3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uomidlabel"
                tools:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                tools:textColor="@color/colorPrimaryDark" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewLabel4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qtyidlabel"
                tools:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:textSize="10pt" />


        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/saveButton"
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Save" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Cancel" />

        </TableRow>
    </TableLayout>
</LinearLayout>